# claude-session-replay

./: .gitignore  README.md  pyproject.toml
docs/development/: FORWARD_COMPLETION_ATTACHMENT_PLAN.md  FULL_CONTENT_PRESERVATION_PLAN.md  HUMANIZED_COMPLETION_DISPLAY_PLAN.md  NEXT_FIDELITY_PASS_PLAN.md  PROJECT_PLAN.md  README.md  SUBAGENT_BLOCK_PRESENTATION_PLAN.md  TASK_COMPLETION_GROUPING_PLAN.md  TASK_NAME_PRECEDENCE_PLAN.md  TERMINAL_FIDELITY_IMPROVEMENT_PLAN.md  TURN_GROUPING_PLAN.md
src/claude_session_replay/: __init__.py  cli.py  grouping.py  models.py  parser.py  renderers.py
tests/: test_grouping.py  test_parser.py  test_renderers.py
