[project]
name = "claude-session-replay"
version = "0.1.0"
description = "Replay Claude Code session JSONL files as readable transcripts."
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
